update jellyfin css

--- a/css/jellyfin_fix.css
+++ b/css/jellyfin_fix.css
@@ -14,8 +14,8 @@
 
   div#indexPage {
     padding-top: 1em!important;
-    mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgba(0, 0, 0, 0) 100px, rgb(0, 0, 0) 130px);
-    -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgba(0, 0, 0, 1) 100px);
+    mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgb(0, 0, 0) 115px);
+    -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgb(0, 0, 0) 115px);
     overflow: scroll;
     top: 35px!important;
   }
@@ -23,10 +23,9 @@
 
 @media (max-width: 75em) {
   div#indexPage {
-    padding-top: 4em!important;
-    mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgba(0, 0, 0, 0) 100px, rgb(0, 0, 0) 130px);
-    -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,0) 0px, rgba(0, 0, 0, 1) 100px);
-    overflow: scroll;
+    padding-top: 5em!important;
+    mask-image: linear-gradient(180deg, rgba(191,26,26,0) 0px, rgb(0, 0, 0) 130px);    overflow: scroll;
+    -webkit-mask-image: linear-gradient(180deg, rgba(191,26,26,0) 0px, rgb(0, 0, 0) 130px);    overflow: scroll;
     top: 35px!important;
   }
 }
