update jellyfin css

--- a/css/jellyfin_fix.css
+++ b/css/jellyfin_fix.css
@@ -21,8 +21,7 @@
   }
 
 
-  .tmla-mask.backdrop,
-  .tmla-mask.hide,
+  .tmla-mask,
   .mainDrawer.transition.touch-menu-la.drawer-open {
     top: 55px!important;
   }
