--- a/css/jellyfin_custom.css
+++ b/css/jellyfin_custom.css
@@ -6,3 +6,10 @@
 .pageTitleWithDefaultLogo {
   background-image: none;
 }
+
+@media (min-width: 75em) { 
+  .headerTabs.sectionTabs, 
+  .headerTop {
+    background-color: rgba(0,0,0,0.6);
+  }
+}
