--- a/css/jellyfin_fix.css
+++ b/css/jellyfin_fix.css
@@ -30,8 +30,8 @@
 @media (max-width: 75em) {
   div#indexPage {
     padding-top: 5em!important;
-    mask-image: linear-gradient(180deg, rgba(191,26,26,0) 0px, rgb(0, 0, 0) 130px);    overflow: scroll;
-    -webkit-mask-image: linear-gradient(180deg, rgba(191,26,26,0) 0px, rgb(0, 0, 0) 130px);    overflow: scroll;
+    mask-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0) 80px, rgb(0, 0, 0) 130px);    overflow: scroll;
+    -webkit-mask-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0) 80px, rgb(0, 0, 0) 130px);    overflow: scroll;
     top: 35px!important;
   }
 }
