--- a/css/jellyfin_custom.css
+++ b/css/jellyfin_custom.css
@@ -6,7 +6,7 @@
   background-image: none;
 }
 
-@media (min-width: 75em) { 
+@media (max-width: 75em) { 
   .headerTabs.sectionTabs, 
   .headerTop {
     background-color: rgba(0,0,0,0.6);
